padding bug fixed. Horizontal scroll bug fixed

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,6 @@
   position: relative;
   display: flex;
   gap: 31px;
-  width: 100%;
   height: 100vh;
 
   .header__images {
